# api/shops/shop_controller.go
@@ -48,3 +48,39 @@ func CreateShop(c *gin.Context) {
 		"data":    shop,
 	})
 }
+
+// GetShopByUser godoc
+// @Summary      ดูร้านค้า
+// @Description  ดูร้านค้าของ User ที่ Login อยู่ (ดึง ID จาก Token)
+// @Tags         Shop
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Success      200  {array}   models.Shop
+// @Failure      404  {object}  map[string]string "Shop not found"
+// @Failure      500  {object}  map[string]string "Internal Error"
+// @Router       /api/getShop [get]
+func GetShopByUser(c *gin.Context) {
+	userId, exists := c.Get("user_id")
+	if !exists {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
+		return
+	}
+
+	var shops []models.Shop
+
+	result := database.DB.Where("user_id = ?", userId).Find(&shops)
+
+	if result.Error != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
+		return
+	}
+
+	// เช็คว่ามีร้านไหม (Optional: ถ้าอยากให้ return 404 เมื่อไม่มีร้านเลย)
+	if len(shops) == 0 {
+		c.JSON(http.StatusNotFound, gin.H{"message": "No shops found", "data": []string{}})
+		return
+	}
+
+	c.JSON(http.StatusOK, shops)
+}
