# routes/route.go
@@ -21,10 +21,9 @@ func SetupRouter() *gin.Engine {
 	{
 		auth.POST("/register", authController.Register)
 		auth.POST("/login", authController.Login)
-        auth.POST("/verify-registration", authController.VerifyRegistration)
-        auth.POST("/change-email-verify", authController.ChangeEmailBeforeVerify)
+		auth.POST("/verify-registration", authController.VerifyRegistration)
+		auth.POST("/change-email-verify", authController.ChangeEmailBeforeVerify)
 
-        
 		//  เพิ่มเส้นทางสำหรับกู้รหัสผ่านตรงนี้ครับ
 		auth.POST("/request-reset", resetController.RequestResetOTP)
 		auth.POST("/verify-otp", resetController.VerifyOTP)
@@ -40,6 +39,7 @@ func SetupRouter() *gin.Engine {
 	{
 
 		protected.POST("/createShop", shopController.CreateShop)
+		protected.GET("/getShop", shopController.GetShopByUser)
 
 		protected.POST("/createProduct", productController.CreateProduct)
 
